--- a/.github/workflows/push-image-to-ecr.yaml
+++ b/.github/workflows/push-image-to-ecr.yaml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
+        id: checkout
         uses: actions/checkout
 
       - name: Setup Docker Buildx
@@ -16,6 +17,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Login to Amazon ECR
+        id: login
         environment: development
         uses: docker/login-action@v2
         with:
@@ -24,6 +26,7 @@ jobs:
           password: ${{ secret.ECR_REGI_PASS }}
 
       - name: Build and push
+        id: buildpush
         environment: development
         uses: docker/build-push-action@v4
         with:
