--- a/.github/workflows/push-image-to-ecr.yaml
+++ b/.github/workflows/push-image-to-ecr.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Checkout
         id: checkout
-        uses: actions/checkout
+        uses: actions/checkout@v3.6.0
 
       - name: Setup Docker Buildx
         id: buildx
