--- a/.github/workflows/push-image-to-ecr.yaml
+++ b/.github/workflows/push-image-to-ecr.yaml
@@ -5,7 +5,8 @@ on:
     branches: master
 
 jobs:
-  docker:
+  build-push:
+    name: Build & push to ECR
     environment: development
     runs-on: ubuntu-latest
     steps:
@@ -13,17 +14,21 @@ jobs:
         id: checkout
         uses: actions/checkout@v3.6.0
 
+      - name: Configure AWS credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4 
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ vars.AWS_REGION }}
+
       - name: Setup Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Login to Amazon ECR
-        id: login
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ vars.ECR_REGI_ADDRESS }}
-          username: ${{ secrets.ECR_REGI_USER }}
-          password: ${{ secrets.ECR_REGI_PASS }}
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build and push
         id: buildpush
