GHA: added ECR Repo env

--- a/.github/workflows/push-image-to-ecr.yaml
+++ b/.github/workflows/push-image-to-ecr.yaml
@@ -30,6 +30,7 @@ jobs:
         id: build-push-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ steps.login-ecr.outputs.repository }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
           make image-ecr
